# voice-input

./: .gitignore  Cargo.toml  INSTALL_UBUNTU.md  OPTIMIZATION.md  README.md  RELEASE_CHECKLIST.md  RELEASE_SUMMARY.md  config.yaml  config.yaml.example  pyproject.toml  requirements.txt  test_cursor_input.py  test_optimization.py
docs/: resource-checklist.md
packaging/deb/voice-input_0.3.0/DEBIAN/: control  postinst  prerm
packaging/deb/voice-input_0.3.0/opt/voice-input/: voice_input-0.3.0-py3-none-any.whl
packaging/deb/voice-input_0.3.0/usr/share/applications/: voice-input.desktop
scripts/: disable-autostart.sh  enable-autostart.sh  install.sh  uninstall.sh  voice-input.desktop  voice-input.sh
src/: main.rs
src/audio/: mod.rs
src/config/: mod.rs
src/hotkey/: mod.rs
src/logger/: mod.rs
src/process_lock/: mod.rs
src/recognizer/: mod.rs  xunfei.rs
src/voice_input/: __init__.py  config.py  hotkey.py  logger_config.py  main.py  notify.py  portal.py  process_lock.py  recorder.py  run.py  sound.py  tray.py  typer.py
src/voice_input/recognizer/: __init__.py  base.py  whisper_backend.py  xunfei.py
