[package]
name = "voice-input"
version = "0.1.0"
edition = "2021"
description = "流式语音输入工具 - Linux 上的实时语音转文字输入工具"
authors = ["lifuhaolife <l2448808186@gmail.com>"]
license = "MIT"

[dependencies]
# 音频处理
cpal = "0.15"
hound = "3.5"

# WebSocket
tungstenite = "0.21"
tokio-tungstenite = "0.21"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置
serde_yaml = "0.9"
dirs = "5.0"

# 加密
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"

# 日志
log = "0.4"
env_logger = "0.10"
chrono = "0.4"

# 快捷键（evdev）
evdev = "0.12"

# 文本输入
uinput = "0.1"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2"

# 剪贴板
arboard = "3.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
